--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,27 @@
     <artifactId>poi</artifactId>
     <version>3.16</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.4</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.github.fommil/java-logging -->
+<dependency>
+    <groupId>com.github.fommil</groupId>
+    <artifactId>java-logging</artifactId>
+    <version>1.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
+<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-core</artifactId>
+    <version>2.2</version>
+    <scope>test</scope>
+</dependency>
+
 	
   </dependencies>
 </project>
